--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  percent_indicator: ^4.2.3
+  firebase_core: ^3.7.0
+  cloud_firestore: ^5.4.5
+  firebase_auth: ^5.3.2
+  url_launcher: ^6.3.1
+  video_player: ^2.9.2
+  youtube_player_flutter: ^9.1.1
+  youtube_player_iframe: ^5.2.0
 
 dev_dependencies:
   flutter_test:
